# Skillbox_practice_works_25

./: CMakeLists.txt  README.md
include/: task1_class.h  task1_structs.h  task2_cpu_class.h  task2_disk_class.h  task2_gpu_class.h  task2_kbd_class.h  task2_macros.h  task2_ram_class.h  task2_structs.h  use-lib.h  use_lib.h
src/: CMakeLists.txt  main.cpp  task1_main.cpp  task2_main.cpp
